fixed mobile and tablet stretch goal on hover

--- a/sass/_eapiSection.scss
+++ b/sass/_eapiSection.scss
@@ -58,22 +58,23 @@ select#categorySelect {
 
 .articleBox:hover .articleAbstract {    
     margin-top: 0;
+
+    @include desktop {
     visibility: visible;
     max-height: 250px;
+    }
 }
 
 .articleAbstract {
     background: rgba(0,0,0,.5);
-    padding: 1.5rem;
-    visibility: hidden;
-    transition: .8s ease-in-out;
-    margin-top: 3rem;
-    max-height: 0;
-
 
     @include desktop {
     overflow: hidden;
     transition: .8s ease-in-out;
     text-align: left;
+    padding: 1.5rem;
+    margin-top: 3rem;
+    max-height: 0;
+    visibility: hidden;
     }
 }
